<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/cancel"
        android:focusable="true"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_session"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/amount"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/et_session_amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/innings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_session_amt" />

    <EditText
        android:id="@+id/et_session_inn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inning_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/over_Colon"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_session_inn" />

    <EditText
        android:id="@+id/et_session_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/over"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textview24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/fancy_prediction"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_session_over" />

    <EditText
        android:id="@+id/et_session_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prediction_score"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview24" />

    <Spinner
        android:id="@+id/yn_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_session_fp"
        app:layout_constraintStart_toEndOf="@+id/et_session_fp"
        app:layout_constraintTop_toTopOf="@+id/et_session_fp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/actual_score"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_session_fp" />

    <EditText
        android:id="@+id/et_session_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actual_score_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/player_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_session_as" />

    <EditText
        android:id="@+id/et_session_playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_name_hint"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <!--  <LinearLayout
          android:id="@+id/l1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="horizontal"
          android:padding="10dp"
          android:weightSum="2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView16">


          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/team_name"
              android:textColor="@color/black"
              android:textSize="16sp" />

          <EditText
              android:id="@+id/et_teamName"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:padding="7dp"
              android:layout_weight="1"
              android:background="@drawable/trans_round_rect_border"
              android:importantForAutofill="no"
              android:inputType="textCapSentences" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/l2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="horizontal"
          android:padding="10dp"
          android:weightSum="2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/l1">


          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/session_name"
              android:textColor="@color/black"
              android:textSize="16sp" />

          <EditText
              android:id="@+id/et_sessionName"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:padding="7dp"
              android:layout_weight=".5"
              android:background="@drawable/trans_round_rect_border"
              android:importantForAutofill="no"
              android:inputType="textCapSentences"
              />

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight=".5"
              android:fontFamily="@font/roboto"
              android:gravity="center"
              android:text="@string/over"
              android:textColor="@color/black"
              android:textSize="16sp" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/l4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="horizontal"
          android:padding="10dp"
          android:weightSum="2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/l2">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/commission"
              android:textColor="@color/black"
              android:textSize="16sp" />

          <androidx.appcompat.widget.SwitchCompat
              android:id="@+id/sw_commission"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:checked="true" />
      </LinearLayout>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/round_rect"
        android:backgroundTint="@color/purple_500"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_session_playerName" />

</androidx.constraintlayout.widget.ConstraintLayout>