<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_weight="6"
    android:background="@drawable/trans_round_rect_border"
    android:orientation="horizontal"
    android:padding="5dp">


    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="17sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto"
        android:text="@string/over"
        android:textAlignment="center"
        android:textColor="@color/black"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_open"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="17sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto"
        android:text="@string/open"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_runs"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="17sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto"
        android:text="@string/min"
        android:textAlignment="center"
        android:textColor="@color/black"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="17sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto"
        android:text="@string/max"
        android:textAlignment="center"
        android:textColor="@color/black"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_done"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="17sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto"
        android:text="@string/done"
        android:textAlignment="center"
        android:textColor="@color/black"
        tools:targetApi="o" />

</LinearLayout>